--- a/IDCA.Client/View/TableSettingWindow.xaml
+++ b/IDCA.Client/View/TableSettingWindow.xaml
@@ -57,10 +57,24 @@
                     </Style>
                     <Style TargetType="TextBox" BasedOn="{StaticResource MahApps.Styles.TextBox}">
                         <Setter Property="Width" Value="120"/>
-                        <Setter Property="Height" Value="20"/>
+                        <Setter Property="Height" Value="25"/>
                         <Setter Property="IsReadOnly" Value="True"/>
-                        <Setter Property="FontSize" Value="13"/>
+                        <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.Content}"/>
                         <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
+                    </Style>
+                    <Style TargetType="TextBlock">
+                        <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.Content}"/>
+                        <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
+                        <Setter Property="VerticalAlignment" Value="Center"/>
+                        <Setter Property="Margin" Value="15 5"/>
+                    </Style>
+                    <Style TargetType="ComboBox" BasedOn="{StaticResource MahApps.Styles.ComboBox}">
+                        <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.Content}"/>
+                        <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
+                        <Setter Property="Margin" Value="5"/>
+                        <Setter Property="Height" Value="25"/>
+                        <Setter Property="Width" Value="100"/>
+                        <Setter Property="IsReadOnly" Value="True"/>
                     </Style>
                 </StackPanel.Resources>
 
@@ -117,6 +131,12 @@
                 </Button>
 
                 <TextBox VerticalContentAlignment="Center" Text="{Binding ExcelSettingFilePath}"/>
+
+                <TextBlock FontWeight="Bold">上下文类型</TextBlock>
+                <ComboBox SelectedItem="{Binding ContextSelectedItem}" ItemsSource="{Binding ContextSelections}"/>
+
+                <TextBlock FontWeight="Bold">语言类型</TextBlock>
+                <ComboBox SelectedItem="{Binding LanguageSelectedItem}" ItemsSource="{Binding LanguageSelections}"/>
 
             </StackPanel>
 
